2001-06-21  Alan Modra  <amodra@bigpond.net.au>

	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Always
	allocate local .got space.  Use shortcuts from hash table for .got
	and .plt rather than comparing section names.
	(elf32_hppa_check_relocs): Use local_plt_refcounts var rather than
	adjusting index into local_got_refcounts to document what we are
	really doing.
	(elf32_hppa_relocate_section): Similarly for local_plt_offsets.
	Tidy .got and .plt error checking.

2001-06-19  Philip Blundell  <philb@gnu.org>

	* configure.in: Set version to 2.11.2.
	* configure: Regenerate.

2001-06-19  Andreas Jaeger  <aj@suse.de>

	Merge from mainline sources:
	2001-06-19  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Fix creation of
	dynamic symbols.
	2001-06-07  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_finish_dynamic_symbol): Add an
	assertion.
	(elf64_x86_64_check_relocs): Set an alignment of 8 for .rela
	sections; handle further relocations.
	2001-06-01  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Add PC8
	relocation, small reformatting.

2001-06-14  Nick Clifton <nickc@redhat.com>

	Merge from mainline sources:
	2001-04-27  Sean McNeil <sean@mcneil.com>
	* config.bfd: Add arm-vxworks target.
	* coff-arm (coff_arm_relocate_section): Add in symbol value to
	addend (fro VXworks targets).
	2001-03-06  Nick Clifton  <nickc@redhat.com>
	* elf32-arm.h (elf32_arm_final_link_relocate): Clear bit zero
	of offset in BLX(1) instruction.
	* coff-arm.c (coff_arm_relocate_section): Clear bit zero of
	offset in BLX(1) instruction.
        Fix formatting.
	2001-03-06  Nick Clifton  <nickc@redhat.com>
	* coff-arm.c (coff_arm_reloc_type_lookup): Add
	BFD_RELOC_THUMB_PCREL_BLX.
	2001-05-04  Nick Clifton  <nickc@cambridge.redhat.com>
	* elf32-arm.h (elf32_arm_final_link_relocate): Set
        EF_ARM_HASENTRY if the start address is set.

2001-06-11  Alan Modra  <amodra@bigpond.net.au>
