@@ -1,3 +1,8 @@
+2001-06-20  Bo Thorsen  <bo@suse.co.uk>
+
+        * elf64-x86-64.c (elf64_x86_64_relocate_section): Fix linking of
+        shared libraries.
+
 2001-06-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Always
